--- a/start.html
+++ b/start.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>title page</title>
+  <body>
+    <div class="title">
+        <h1>小学生向けクイズ/h1>
+        <div class="score">
+            <p>過去のスコア: </p>
+        </div>
+        <a href="Honpen.html" class="btn">ゲームスタート</a>
+   </div>
+</body>
+</html>
 
+
+
+
+
+
+
+
+
+    
+
+  
