--- a/start.html
+++ b/start.html
@@ -6,7 +6,7 @@
     <title>title page</title>
   <body>
     <div class="title">
-        <h1>小学生向けクイズ/h1>
+        <h1>小学生向けクイズ<h1>
         <div class="score">
             <p>過去のスコア: </p>
         </div>
