--- a/start.html
+++ b/start.html
@@ -4,14 +4,15 @@
     <a herf ="start.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>title page</title>
+    <title>home page</title>
   <body>
     <div class="title">
         <h1>小学生向けクイズ<h1>
-        <div class="score">
-            <p>過去のスコア: </p>
-        </div>
         <a href="Honpen.html" class="btn">ゲームスタート</a>
+
+              <div class="score">
+            <p>自己ベストスコア: </p>
+        </div>
    </div>
 </body>
 </html>
