--- a/start.html
+++ b/start.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <a herf ="start.css">
+    <link rel ="start.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home page</title>
@@ -9,7 +9,6 @@
     <div class="title">
         <h1>小学生向けクイズ<h1>
         <a href="Honpen.html" class="btn">ゲームスタート</a>
-
               <div class="score">
             <p>自己ベストスコア: </p>
         </div>
