Qのていせい

--- a/Honpen/Honpen.html
+++ b/Honpen/Honpen.html
@@ -8,16 +8,16 @@
     <body>
         <div class="base">
             <div class="Always">
-                <div class="Score">てｓｔ　点</div>
+                <div class="Score">　点</div>
                 <div class="Nokori">1/15　問</div>
             </div>
             <div class="Quiz">
                 <div class="Quiz_Qus">パンはパンでも</div>
                 <div class="Quiz_Ans">
-                    <dib class="Quiz_Ans_1">チンパン</dib>
-                    <dib class="Quiz_Ans_2">フライパン</dib>
-                    <dib class="Quiz_Ans_3">アンパン</dib>
-                    <dib class="Quiz_Ans_4">メロンパン</dib>
+                    <div class="Quiz_Ans_1" >チンパン</div>
+                    <div class="Quiz_Ans_2">フライパン</div>
+                    <div class="Quiz_Ans_3">アンパン</div>
+                    <div class="Quiz_Ans_4">メロンパン</div>
                 </div>
             </div>
             <script src="js.js"></script>
