--- a/Result/Result.html
+++ b/Result/Result.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <div class="nanika">
+            <h1>結果発表</h1>
+            <h2>20問中○○門正解でした！</h2>
+            
             <script src="js.js"></script>
         </div>
     </body>
