--- a/Result/Result.html
+++ b/Result/Result.html
@@ -9,7 +9,10 @@
         <div class="nanika">
             <h1>結果発表</h1>
             <h2>20問中○○門正解でした！</h2>
-            
+            <h2>スコア</h2>
+            <div class="score"></div>
+            <h3>過去の最高スコア</h3>
+            <div class="kako-score"></div>
             <script src="js.js"></script>
         </div>
     </body>
