--- a/Honpen/Honpen.html
+++ b/Honpen/Honpen.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-<html lang="ja" class="Honpen">
+<html lang="ja" class="Honpen-Kamoku">
     <head>
         <meta charset="UTF-8">
-        <title>クイズ</title>
-        <link rel="stylesheet" href="./css.css">
+        <title>科目選択</title>
+        <link rel="stylesheet" href="./Honpen.css">
     </head>
     <body>
+	<p>どの教科をうける？</p>
         <div class="base">
-            <div class="Always">
-                <div class="Score">　点</div>
-                <div class="Nokori">1/15　問</div>
+            <div class="swi Eng">
+		<p>英語を受ける！</p>
+		<image src="英語っぽい画像" href="なんか">
             </div>
-            <div class="Quiz">
-                <div class="Quiz_Qus">パンはパンでも</div>
-                <div class="Quiz_Ans">
-                    <div class="Quiz_Ans_1" >チンパン</div>
-                    <div class="Quiz_Ans_2">フライパン</div>
-                    <div class="Quiz_Ans_3">アンパン</div>
-                    <div class="Quiz_Ans_4">メロンパン</div>
-                </div>
+            <div class="swi Sya">
+		<p>社会を受ける！</p>
+		<image src="英語っぽい画像" href="なんか">
+            </div>
+            <div class="swi Sci">
+		<p>理科を受ける！</p>
+		<image src="英語っぽい画像" href="なんか">
             </div>
             <script src="js.js"></script>
         </div>
+	<div class="return"><a href="./../start.html">スタートに戻る</a></div>
     </body>
+  
 </html>
