--- a/Result/Result.html
+++ b/Result/Result.html
@@ -3,11 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <title>taitoru</title>
-        <link rel="stylesheet" href="./css.css">
+        <link rel="stylesheet" href="Result.css">
     </head>
     <body>
-        <div class="nanika">
-            <script src="js.js"></script>
+        <div class="kekka">
+            <h1>結果発表</h1>
+            <h2>0/10</h2>
+            <div class="zenkai">
+            <h2>前回の得点</h2>
+            <div calss="tokuten"></div>
+            
+         </div>
+         <div class="modoru"></div>
+         <input type="button" value="戻る">
         </div>
+
+        <script src="Result.js"></script>
     </body>
 </html>
