--- a/syakai/syakai.html
+++ b/syakai/syakai.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html lang="ja" class="taitoru">
-    <head>
-        <meta charset="UTF-8">
-        <title>社会クイズ</title>
-        <link rel="stylesheet" href="syakai.css">
-    </head>
-    <body>
-       <h1>社会のクイズ</h1>
-       <div id="quiz-box">
-         <ul id="quiz-list"></ul>
-         <button id="next">次の問題</button>
-        </div>
-    
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="syakai.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>社会のクイズ</title>
+   
+</head>
+<body>
 
-        <script src="syakai.js"></script>
-    </body>
+    <h1>社会のクイズ</h1>
+
+    <div id="quiz-container">
+    </div>
+
+    <button id="check-button">結果を確認</button>
+    <p class="result" id="result"></p>
+    <script src="syakai.js"></script>
+   
+</body>
 </html>
