教科選択画面

--- a/Quiz_Sys_Samp/html.html
+++ b/Quiz_Sys_Samp/html.html
@@ -18,12 +18,12 @@
                 <div class="Quiz_Q">ここに問題文</div>
             <div class="Quiz_AnsBox5">ここに回答の箱
                 <div class="Quiz_AnsBoxLR L">左
-                    <div class="Quiz_AnsBox 1">左上</div>
-                    <div class="Quiz_AnsBox 3">左下</div>
+                    <div class="Quiz_AnsBox_1">左上</div>
+                    <div class="Quiz_AnsBox_3">左下</div>
                 </div>
                 <div class="Quiz_AnsBoxLR 6">右
-                    <div class="Quiz_AnsBox 2">右上</div>
-                    <div class="Quiz_AnsBox 4">右下</div>
+                    <div class="Quiz_AnsBox_2">右上</div>
+                    <div class="Quiz_AnsBox_4">右下</div>
                 </div>
             </div>
         </div>
