Honpenに戻るボタンを追加しました

--- a/syakai/syakai.html
+++ b/syakai/syakai.html
@@ -16,6 +16,7 @@
 
     <button id="check-button">結果を確認</button>
     <p class="result" id="result"></p>
+    <button onclick="navigateToAnotherPage()">教科選択画面に戻る</button>
     <script src="syakai.js"></script>
    
 </body>
