英語クイズ完成

--- a/Honpen/Honpen.html
+++ b/Honpen/Honpen.html
@@ -9,22 +9,17 @@
 	<h1>どの教科をうける？</h1>
         <div class="base">
             <div class="swi_Eng">
-		        <p>英語を受ける！</p>
-		        <image src="./eng380.png" width="200" height="100" class="image">
+		        <image src="./eng.png" class="image">
             </div>
             <div class="swi_Sya">
-		        <p>社会を受ける！</p>
-		        <image src="./sya370.png" width="200" height="100" class="image">
+		        <image src="./sya.png" class="image">
             </div>
             <div class="swi_Sci">
-		        <p>理科を受ける！</p>
-		        <image src="./rika0.png" width="600" height="400" class="image">
+		        <image src="./rika.png" class="image">
             </div>
-            <script src="./Honpen.js"></script>
-            <div class="reset">reset</div>
-            <script src="js.js"></script>
         </div>
-	<div class="return"><a href="./../start.html">スタートに戻る</a></div>
+	    <div class="swi_Ret"><h2>スタートに戻る</h2></div>
+        <script src="./Honpen.js"></script>
     </body>
   
 </html>
