--- a/Honpen/Honpen.html
+++ b/Honpen/Honpen.html
@@ -8,6 +8,12 @@
     <body>
 	<h1>どの教科をうける？</h1>
         <div class="base">
+            <div class="swi_Japa">
+		        <image src="./kokugo.png" class="image">
+            </div>
+            <div class="swi_Math">
+		        <image src="./sansu.png" class="image">
+            </div>
             <div class="swi_Eng">
 		        <image src="./eng.png" class="image">
             </div>
