--- a/kokugo/kokukgo.html
+++ b/kokugo/kokukgo.html
@@ -19,6 +19,6 @@
     <p class="result" id="a">
     
     </p>
-    <script src="kokougo.js"></script>
+    <script src="kokugo.js"></script>
 </body>
 </html>
