--- a/kokugo/kokukgo.html
+++ b/kokugo/kokukgo.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="rika.css">
+    <link rel="stylesheet" href="kokougo.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>国語のクイズ</title>
    
