--- a/Eng/eng.html
+++ b/Eng/eng.html
@@ -8,9 +8,9 @@
    
 </head>
 <body>
-
+   
     <h1>英語のクイズ</h1>
-
+    <div class="Quiz_Timer">制限時間</div>
     <div id="quiz-container">
     </div>
 
