--- a/rikamondai/rika.html
+++ b/rikamondai/rika.html
@@ -8,9 +8,9 @@
    
 </head>
 <body>
-    <div class="quiz-Timer">制限時間</div>
+   
     <h1>理科のクイズ</h1>
-
+    <div class="Quiz_Timer">制限時間</div>
     <div id="quiz-container">
     </div>
 
